[project]
name = "python-ml-examples"
version = "0.1.0"
description = ""
authors = [
    {name = "Sho Okumoto",email = "lebesgue0118@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.7.0,<3.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "diffusers (>=0.33.1,<0.34.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "tensorboard>=2.19.0,<3.0.0",
    "absl-py (>=2.3.0,<3.0.0)",
    "gdown (>=5.2.0,<6.0.0)",
    "matplotlib-inline>=0.1.7",
    "transformers",
    "num2words>=0.5.14",
    "accelerate>=1.8.0",
    "spacy>=3.8.7",
    "pip>=25.1.1",
    "torchtext>=0.18.0",
    "datasets>=3.6.0",
    "tokenizers>=0.21.1",
    "tiktoken>=0.9.0",
    "colorama>=0.4.6",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers", rev = "v4.49.0-SmolVLM-2" }
